<resources>
    <string name="app_name">GreenPantry</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Home">"Home"</string>
    <string name="Camera">"Camera"</string>
    <string name="Search">"Search"</string>
    <string name="Setting">"Setting"</string>
    <string name="WelcomeBack">"Welcome Back!"</string>
    <string name="PantryOverview">"Pantry Overview"</string>
    <string name="SeeFullPantry">"SEE FULL PANTRY"</string>
    <string name="SuggestedPantryRecipes">"Suggested Pantry Recipes"</string>
    <string name="YourPantry">"Your Pantry"</string>
    <string name="pantryBack">"&lt; Back"</string>
    <string name="Notifications">"Notifications"</string>
    <string name="SearchSubTitle">"Find items without scanning"</string>
    <string name="emptyNotifs1">"No Notifications Yet"</string>
    <string name="emptyNotifs2">"When you get a notification,\nit will show up here"</string>
    <string name="Vegetables">"Vegetables"</string>
    <string name="Fruits">"Fruits"</string>
    <string name="Protein">"Protein"</string>
    <string name="Dairy">"Dairy"</string>
    <string name="Grains">"Grains"</string>
    <string name="Other">"Other"</string>
    <string name="noVal">"0"</string>
    <string name="noSuggestions1">"Looks like your pantry is empty"</string>
    <string name="noSuggestions2">"Add items to your pantry\nto get suggested recipes"</string>
    <string name="emptyPantry1">"Your pantry is empty"</string>
    <string name="emptyPantry2">"Add items to your pantry through\nthe camera or searching"</string>
    <string name="edit">"Edit"</string>
    <string name="nutritionTitle">"Nutrition Information</string>
    <string name="serving">"Serving Size:"</string>
    <string name="gram">"g"</string>
    <string name="mGram">"mg"</string>
    <string name="recipe">"Recipes"</string>
    <string name="calories">"Calories:"</string>
    <string name="cal">"kCal"</string>
    <string name="fiber">"Fibre:"</string>
    <string name="totFat">"Saturated Fat:"</string>
    <string name="transFat">"Trans Fat:"</string>
    <string name="sodium">"Sodium:"</string>
    <string name="calcium">"Calcium:"</string>
    <string name="sugar">"Sugars:"</string>
    <string name="protein">"Protein:"</string>
    <string name="iron">"Iron:"</string>
    <string name="carbs">"Carbohydrates:"</string>
    <string name="add">"ADD TO PANTRY"</string>
    <string name="time">"Time:"</string>
    <string name="difficulty">"Difficulty:"</string>
    <string name="numServing">"Number of 100g servings:"</string>
    <string name="minute">"min"</string>
    <string name="ten">"/10"</string>
    <string name="ingredients">"Ingredients"</string>
    <string name="Instructions">"Instructions"</string>
    <string name="period">"."</string>
    <string name="amount">"Amount"</string>
    <string name="units">"Unit Measurement"</string>
    <string name="update">"UPDATE"</string>
    <string name="filter">"Filter"</string>
    <string name="save">"SAVE"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>