<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/noVal"
            android:fontFamily="@font/roboto_regular"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/period"
            android:fontFamily="@font/roboto_regular"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/item_line"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/WelcomeBack"
            android:fontFamily="@font/roboto_regular"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp" />

    </LinearLayout>
</LinearLayout>
