<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Back Button -->
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantryBack"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Notification Title -->
        <TextView
            android:id="@+id/NotifTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notifications"
            android:textSize="35sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <!-- Empty message container -->
        <LinearLayout
            android:id="@+id/noNotifs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/NotifTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyNotifs1"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/gray"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyNotifs2"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/gray"
                android:padding="5dp"/>
        </LinearLayout>


        <!-- Notif List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notifRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/NotifTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>