<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/round_rectangle"
    android:backgroundTint="@color/white"
    android:layout_gravity="bottom"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/YourPantry"
            android:fontFamily="@font/roboto_bold"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:text="Amount:"/>

        <TextView
            android:id="@+id/sliderVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noVal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingStart="10dp" />

    </LinearLayout>

    <!-- amount slider -->
    <com.google.android.material.slider.Slider
        android:id="@+id/amountSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="100"
        android:stepSize="1"
        android:layout_marginTop="5dp"
        app:tickVisible="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/units"/>

    <!-- unit text box -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unitInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="bottom"
        android:layout_marginTop="50dp"
        android:background="@drawable/semiround_rectangle"/>

</LinearLayout>