<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Notification Button -->
        <ImageButton
            android:id="@+id/notificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notif"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/Notifications"
            android:layout_marginTop="30dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:padding="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Welcome Back Title -->
        <TextView
            android:id="@+id/homeWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WelcomeBack"
            android:textSize="35sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/notificationButton"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#000000"/>

        <!-- Pantry Overview Subtitle -->
        <TextView
            android:id="@+id/homePantryOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PantryOverview"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toBottomOf="@id/homeWelcomeTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:textColor="#000000"/>

        <!-- Home Pantry Layout-->
        <FrameLayout
            android:id="@+id/homePantryLayout"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/homePantryOverview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <!-- Example content inside this layout -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expected Pantry Overview Here"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/roboto_regular"
                android:layout_gravity="center" />
        </FrameLayout>

        <!-- See Full Pantry Button -->
        <Button
            android:id="@+id/homeSeeFullPantryBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SeeFullPantry"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/semiround_rectangle"
            app:layout_constraintTop_toBottomOf="@id/homePantryLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Suggested Pantry Recipes Title -->
        <TextView
            android:id="@+id/homeSuggestedPantryRecipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SuggestedPantryRecipes"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toBottomOf="@id/homeSeeFullPantryBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"/>

        <!-- Suggested Pantry Recipes Title List -->
        <ScrollView
            android:id="@+id/searchScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/homeSuggestedPantryRecipes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:id="@+id/homeSuggestedPantryRecipesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>