<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Notification Button -->
        <ImageButton
            android:id="@+id/notificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notif"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/Notifications"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:padding="2dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <!-- Search Title -->
        <TextView
            android:id="@+id/SearchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search"
            android:textSize="35sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/notificationButton"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <!-- Subtitle  -->
        <TextView
            android:id="@+id/SearchSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SearchSubTitle"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toBottomOf="@id/SearchTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray"/>


        <!-- search bar !-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/gray"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:startIconDrawable="@drawable/ic_search_off"
            app:startIconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/SearchSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:hint="@string/Search"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Search List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/searchInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>