<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/container"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.login.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:background="@drawable/login_stock">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:src="@drawable/logo_transparent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"/>

    </FrameLayout>

    <!-- username text box -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Required"
        android:textSize="13sp"
        android:textColor="@color/red"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="5dp"
        android:visibility="gone"/>

    <!-- password text box -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/semiround_rectangle"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textSize="16sp"
            android:textColor="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Required"
        android:textSize="13sp"
        android:textColor="@color/red"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="5dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Forgot Password?"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="5dp"
        android:clickable="true" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/loginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Login Failed"
        android:textSize="13sp"
        android:textColor="@color/red"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="35dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/semiround_rectangle"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_regular"
            android:text="Don't have an account?"/>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="13sp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Sign up"
            android:clickable="true"/>

    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
